tests/examples/bad/type_array_mismatch.lat
int main() {
    int[] arr;
    arr[0] = true;
    return 1;
}